--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Te Tai Hou Teams – 2025</title>
 
+<!-- jsPDF & AutoTable for PDF generation -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.6.1/jspdf.umd.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.28/jspdf.plugin.autotable.min.js"></script>
+
 <style>
 /* --- General page setup --- */
 body {
@@ -147,7 +151,7 @@ tbody tr:hover {
     padding: 8px;
   }
 
-  /* ✅ Alternate shading for records */
+  /* ✅ Alternate shading for mobile records */
   tr:nth-child(odd) {
     background-color: #ffffff;
   }
@@ -210,6 +214,7 @@ tbody tr:hover {
   <select id="gdRegFilter"><option value="">All GD Regist.</option></select>
   <button id="export">Export CSV</button>
   <button id="toggleGroups">Collapse All</button>
+  <button id="pdfExport">Export PDF (All Teams)</button>
 </div>
 
 <div style="margin-top: 6px;">
@@ -229,6 +234,7 @@ const gdRegFilter = document.getElementById('gdRegFilter');
 const container = document.getElementById('table-container');
 const exportBtn = document.getElementById('export');
 const toggleGroupsBtn = document.getElementById('toggleGroups');
+const pdfExportBtn = document.getElementById('pdfExport');
 
 let headers = [];
 let allRows = [];
@@ -359,7 +365,7 @@ function renderGroups(rows) {
   });
 }
 
-// --- Filters & Export & Expand/Collapse ---
+// --- Filters ---
 function applyFilters() {
   const q = search.value.toLowerCase();
   const sel = selectionFilter.value;
@@ -389,6 +395,7 @@ selectionFilter.addEventListener('change', applyFilters);
 clearedFilter.addEventListener('change', applyFilters);
 gdRegFilter.addEventListener('change', applyFilters);
 
+// --- CSV Export ---
 exportBtn.addEventListener('click', () => {
   const rows = [];
   const visibleHeaders = headers.filter((_, i) => i !== indicativeIndex);
@@ -408,6 +415,7 @@ exportBtn.addEventListener('click', () => {
   link.click();
 });
 
+// --- Expand/Collapse ---
 toggleGroupsBtn.addEventListener('click', () => {
   const allGroups = container.querySelectorAll('.group-content');
   const anyOpen = Array.from(allGroups).some(g => !g.classList.contains('hidden'));
@@ -426,6 +434,55 @@ toggleGroupsBtn.addEventListener('click', () => {
   });
 
   toggleGroupsBtn.textContent = anyOpen ? 'Expand All' : 'Collapse All';
+});
+
+// --- PDF Export (All Teams) ---
+pdfExportBtn.addEventListener('click', () => {
+  const { jsPDF } = window.jspdf;
+  const doc = new jsPDF({ orientation: 'landscape' });
+
+  container.querySelectorAll('section').forEach((section, idx) => {
+    const wrapper = section.querySelector('.group-content');
+    if (!wrapper) return;
+
+    const teamName = section.querySelector('.group-header span:first-child').textContent;
+    const tableRows = [];
+
+    const tbody = wrapper.querySelector('tbody');
+    if (!tbody) return;
+
+    tbody.querySelectorAll('tr').forEach(tr => {
+      const row = [];
+      tr.querySelectorAll('td').forEach(td => {
+        const label = td.getAttribute('data-label');
+        if (label.toLowerCase() === 'paid' || label.toLowerCase() === 'cleared') return;
+        row.push(td.textContent.trim());
+      });
+      tableRows.push(row);
+    });
+
+    const headersForPDF = headers
+      .filter(h => h.toLowerCase() !== 'paid' && h.toLowerCase() !== 'cleared')
+      .filter((_, i) => i !== indicativeIndex);
+
+    if (tableRows.length === 0) return;
+
+    if (idx > 0) doc.addPage(); // New page per team
+    doc.setFontSize(16);
+    doc.text(`Team: ${teamName}`, 14, 20);
+
+    doc.autoTable({
+      startY: 30,
+      head: [headersForPDF],
+      body: tableRows,
+      styles: { fontSize: 10 },
+      headStyles: { fillColor: [43, 108, 176] },
+      alternateRowStyles: { fillColor: [242, 244, 247] },
+      theme: 'grid',
+    });
+  });
+
+  doc.save('All_Teams.pdf');
 });
 </script>
 </body>
