--- a/index.html
+++ b/index.html
@@ -5,10 +5,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Te Tai Hou Teams – 2025</title>
 
-<!-- jsPDF & AutoTable for PDF generation -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.6.1/jspdf.umd.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.28/jspdf.plugin.autotable.min.js"></script>
-
 <style>
 /* --- General page setup --- */
 body {
@@ -21,14 +17,12 @@ body {
   justify-content: center;
 }
 
-/* --- Page wrapper centered --- */
 #page-wrapper {
   width: 100%;
   max-width: 75%;
   min-width: 320px;
 }
 
-/* --- Header --- */
 header {
   display: flex;
   align-items: center;
@@ -46,7 +40,6 @@ header h1 {
   color: #1a365d;
 }
 
-/* --- Controls --- */
 .controls {
   display: flex;
   justify-content: center;
@@ -77,7 +70,6 @@ header h1 {
   background-color: #1e4e8c;
 }
 
-/* --- Group containers --- */
 section {
   margin-bottom: 1rem;
   border-radius: 0.75rem;
@@ -105,7 +97,6 @@ section {
   display: none;
 }
 
-/* --- Table --- */
 table {
   width: 100%;
   border-collapse: collapse;
@@ -129,7 +120,6 @@ tbody tr:hover {
   background: #f9fafb;
 }
 
-/* --- Responsive mobile view --- */
 @media (max-width: 768px) {
   #page-wrapper {
     max-width: 100%;
@@ -146,18 +136,10 @@ tbody tr:hover {
   tr {
     margin-bottom: 12px;
     border-bottom: 1px solid #ddd;
-    border-radius: 10px;
-    overflow: hidden;
-    padding: 8px;
   }
 
-  /* ✅ Alternate shading for mobile records */
-  tr:nth-child(odd) {
-    background-color: #ffffff;
-  }
-  tr:nth-child(even) {
-    background-color: #f2f4f7;
-  }
+  tr:nth-child(odd) { background-color: #ffffff; }
+  tr:nth-child(even) { background-color: #f2f4f7; }
 
   td {
     display: flex;
@@ -190,9 +172,8 @@ tbody tr:hover {
   td[data-label="Email"] span,
   td[data-label="Contact number"] span {
     text-align: right;
-    white-space: normal;
-    overflow-wrap: anywhere;
     word-break: break-all;
+    overflow-wrap: anywhere;
   }
 }
 </style>
@@ -200,11 +181,11 @@ tbody tr:hover {
 
 <body>
 <div id="page-wrapper">
-<header style="text-align: center; margin-bottom: 24px;">
+<header>
   <a href="https://www.poriruaheatbasketball.org" target="_blank">
-    <img src="images/logo.png" alt="Porirua Heat Logo" style="height: 60px; border-radius: 50%; margin-bottom: 12px;">
+    <img src="images/logo.png" alt="Porirua Heat Logo">
   </a>
-  <h1 style="font-size: 1.8em; margin: 0; color: #1a365d;">TE TAI HOU TEAMS – 2025 TERM 4</h1>
+  <h1>TE TAI HOU TEAMS – 2025 TERM 4</h1>
 </header>
 
 <div class="controls">
@@ -213,18 +194,16 @@ tbody tr:hover {
   <select id="clearedFilter"><option value="">All Cleared</option></select>
   <select id="gdRegFilter"><option value="">All GD Regist.</option></select>
   <button id="export">Export CSV</button>
+  <button id="generatePDF">Generate PDF</button>
   <button id="toggleGroups">Collapse All</button>
-  <button id="pdfExport">Export PDF (All Teams)</button>
-</div>
-
-<div style="margin-top: 6px;">
-  <a href="https://limonza.github.io/te-tai-hou-teams-2025/Training.html" style="font-size: 1em; color: #2b6cb0; text-decoration: underline;">
-    Confirmed Club Registrations
-  </a>
 </div>
 
 <div id="table-container"></div>
 </div>
+
+<!-- jsPDF + autotable -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.28/jspdf.plugin.autotable.min.js"></script>
 
 <script>
 const search = document.getElementById('search');
@@ -233,8 +212,8 @@ const clearedFilter = document.getElementById('clearedFilter');
 const gdRegFilter = document.getElementById('gdRegFilter');
 const container = document.getElementById('table-container');
 const exportBtn = document.getElementById('export');
+const generatePDFBtn = document.getElementById('generatePDF');
 const toggleGroupsBtn = document.getElementById('toggleGroups');
-const pdfExportBtn = document.getElementById('pdfExport');
 
 let headers = [];
 let allRows = [];
@@ -248,7 +227,7 @@ const groupOrder = [
   "16U Dev","16U Elite","20U","Mens","Womens"
 ];
 
-// --- Load CSV ---
+// Load CSV
 fetch('teams.csv')
   .then(res => res.text())
   .then(text => {
@@ -265,7 +244,6 @@ fetch('teams.csv')
     renderGroups(allRows);
   });
 
-// --- Populate dropdowns ---
 function populateDropdowns() {
   const teamValues = [...new Set(allRows.map(r => r[indicativeIndex]))];
   const clearedValues = [...new Set(allRows.map(r => r[clearedIndex] || '(Blank)'))];
@@ -294,10 +272,9 @@ function populateDropdowns() {
   });
 }
 
-// --- Render groups ---
+// Render Groups
 function renderGroups(rows) {
   container.innerHTML = '';
-
   const groups = rows.reduce((acc, row) => {
     const key = row[indicativeIndex];
     if (!acc[key]) acc[key] = [];
@@ -329,7 +306,7 @@ function renderGroups(rows) {
     const headerRow = document.createElement('tr');
 
     headers.forEach((h, i) => {
-      if (i === indicativeIndex) return;
+      if (i === indicativeIndex || h.toLowerCase() === 'paid' || h.toLowerCase() === 'cleared') return;
       const th = document.createElement('th');
       th.textContent = h;
       headerRow.appendChild(th);
@@ -341,9 +318,9 @@ function renderGroups(rows) {
     groupRows.forEach(r => {
       const tr = document.createElement('tr');
       r.forEach((c, i) => {
-        if (i === indicativeIndex) return;
+        if (i === indicativeIndex || headers[i].toLowerCase() === 'paid' || headers[i].toLowerCase() === 'cleared') return;
         const td = document.createElement('td');
-        td.innerHTML = `<span>${c || ''}</span>`; 
+        td.innerHTML = `<span>${c || ''}</span>`;
         td.setAttribute('data-label', headers[i]);
         tr.appendChild(td);
       });
@@ -365,7 +342,7 @@ function renderGroups(rows) {
   });
 }
 
-// --- Filters ---
+// Filters
 function applyFilters() {
   const q = search.value.toLowerCase();
   const sel = selectionFilter.value;
@@ -395,10 +372,9 @@ selectionFilter.addEventListener('change', applyFilters);
 clearedFilter.addEventListener('change', applyFilters);
 gdRegFilter.addEventListener('change', applyFilters);
 
-// --- CSV Export ---
 exportBtn.addEventListener('click', () => {
   const rows = [];
-  const visibleHeaders = headers.filter((_, i) => i !== indicativeIndex);
+  const visibleHeaders = headers.filter((_, i) => i !== indicativeIndex && headers[i].toLowerCase() !== 'paid' && headers[i].toLowerCase() !== 'cleared');
   rows.push(visibleHeaders.join(','));
   container.querySelectorAll('section').forEach(section => {
     const wrapper = section.querySelector('.group-content');
@@ -415,11 +391,10 @@ exportBtn.addEventListener('click', () => {
   link.click();
 });
 
-// --- Expand/Collapse ---
+// Toggle Groups
 toggleGroupsBtn.addEventListener('click', () => {
   const allGroups = container.querySelectorAll('.group-content');
   const anyOpen = Array.from(allGroups).some(g => !g.classList.contains('hidden'));
-
   allGroups.forEach(groupContent => {
     const section = groupContent.parentElement;
     const header = section.querySelector('.group-header span:last-child');
@@ -432,57 +407,43 @@ toggleGroupsBtn.addEventListener('click', () => {
       header.textContent = `(${count}) ▼`;
     }
   });
-
   toggleGroupsBtn.textContent = anyOpen ? 'Expand All' : 'Collapse All';
 });
 
-// --- PDF Export (All Teams) ---
-pdfExportBtn.addEventListener('click', () => {
+// Generate PDF
+generatePDFBtn.addEventListener('click', () => {
   const { jsPDF } = window.jspdf;
   const doc = new jsPDF({ orientation: 'landscape' });
 
-  container.querySelectorAll('section').forEach((section, idx) => {
-    const wrapper = section.querySelector('.group-content');
-    if (!wrapper) return;
+  container.querySelectorAll('section').forEach((section, index) => {
+    const groupName = section.querySelector('.group-header span:first-child').textContent;
+    const table = section.querySelector('table');
 
-    const teamName = section.querySelector('.group-header span:first-child').textContent;
-    const tableRows = [];
+    const headersForPDF = Array.from(table.querySelectorAll('thead th')).map(th => th.textContent);
+    const dataForPDF = Array.from(table.querySelectorAll('tbody tr')).map(tr => 
+      Array.from(tr.children).map(td => td.textContent)
+    );
 
-    const tbody = wrapper.querySelector('tbody');
-    if (!tbody) return;
-
-    tbody.querySelectorAll('tr').forEach(tr => {
-      const row = [];
-      tr.querySelectorAll('td').forEach(td => {
-        const label = td.getAttribute('data-label');
-        if (label.toLowerCase() === 'paid' || label.toLowerCase() === 'cleared') return;
-        row.push(td.textContent.trim());
+    // Add logo + header
+    const logo = new Image();
+    logo.src = 'images/logo.png';
+    logo.onload = () => {
+      if (index > 0) doc.addPage();
+      doc.addImage(logo, 'PNG', 10, 10, 30, 30);
+      doc.setFontSize(16);
+      doc.text(`Team: ${groupName}`, 50, 25);
+      doc.autoTable({
+        head: [headersForPDF],
+        body: dataForPDF,
+        startY: 45,
+        theme: 'grid',
+        styles: { fontSize: 10 }
       });
-      tableRows.push(row);
-    });
-
-    const headersForPDF = headers
-      .filter(h => h.toLowerCase() !== 'paid' && h.toLowerCase() !== 'cleared')
-      .filter((_, i) => i !== indicativeIndex);
-
-    if (tableRows.length === 0) return;
-
-    if (idx > 0) doc.addPage(); // New page per team
-    doc.setFontSize(16);
-    doc.text(`Team: ${teamName}`, 14, 20);
-
-    doc.autoTable({
-      startY: 30,
-      head: [headersForPDF],
-      body: tableRows,
-      styles: { fontSize: 10 },
-      headStyles: { fillColor: [43, 108, 176] },
-      alternateRowStyles: { fillColor: [242, 244, 247] },
-      theme: 'grid',
-    });
+      if (index === container.querySelectorAll('section').length - 1) {
+        doc.save('TeTaiHouTeams.pdf');
+      }
+    };
   });
-
-  doc.save('All_Teams.pdf');
 });
 </script>
 </body>
